# document-search

./: README.md
DocSearchCpp/: .cproject  .project  DocSearchCpp  main.cpp  outfile.txt
googletests/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  executeIndexTest  executeSearchTest  golden_result.txt  index.cpp  index_test.cpp  search.cpp  search_test.cpp
